Reformat event display to prevent text overflow

--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -1,3 +1,14 @@
 .event-link {
-  color: black
+  color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+b {
+  margin: 0.4rem;
+}
+
+i {
+  font-size: 10pt;
 }
